# sol

./: .gitignore  Cargo.toml
.cargo/: config.toml
client_ts/: client.ts  package-lock.json  package.json  test.ts
client_ts_next/: client.ts  package-lock.json  package.json  test.ts
tree_lib/: Cargo.toml
tree_lib/src/: lib.rs
tree_program/: Cargo.toml  keypair.json
tree_program/src/: lib.rs
xtask/: Cargo.toml
xtask/src/: main.rs
