[workspace]
resolver = "2"
members = ["tree_program", "tree_lib", "xtask"]

# [package]
# name = "tree_ws"
# version = "0.1.0"
# edition = "2021"

[workspace.dependencies]
borsh = "1.5.5"
borsh-derive = "1.5.5"
hex = "0.4.3"
solana-client = "2.2.0"
solana-transaction-status-client-types = "2.2.0"
solana-program = "2.2.1"
solana-program-test = "2.2.0"
solana-sdk = "2.2.1"
